--- a/src/main/resources/templates/client/detail_course.html
+++ b/src/main/resources/templates/client/detail_course.html
@@ -1,67 +1,76 @@
 <!doctype html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
-          content="width=device-width, student-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+        content="width=device-width, student-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Trang chủ</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 
 </head>
+
 <body>
     <!-- Navbar -->
     <header id="header" class="mb-3">
         <nav class="navbar navbar-expand-lg bg-body-tertiary bg-primary fixed-top" data-bs-theme="dark">
             <div class="container-fluid justify-content-between">
                 <a class="navbar-brand" th:href="@{/}">Course</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" th:href="@{/}">Trang chủ</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Lộ trình</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Bài viết</a>
-                    </li>
-                </ul>
-                <div class="d-flex mx-auto" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
-                </div>
-                <div sec:authorize="isAnonymous()" class="text-white d-flex">
-                    <a class="btn" type="button" th:href="@{/register}">Đăng ký</a>
-                    <a class="btn" type="button" th:href="@{/login}">Đăng nhập</a>
-                </div>
-                <div sec:authorize="isAuthenticated()" class="btn-group dropdown-center" style="margin-right: 100px;">
-                    <button type="button" class="btn btn-danger" data-bs-toggle="dropdown" aria-expanded="false" 
-                    style="width: 40px; height: 40px; border-radius: 50%; display: flex; justify-content: center;">
-                        User
-                    </button>
-                    <ul class="dropdown-menu ">
-                        <li><a class="dropdown-item" href="#">Trang cá nhân</a></li>
-                        <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" th:href="@{/enrollmented-course}">Khóa học của tôi</a></li>
-                        <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="#">Cài đặt</a></li>
-                        <li><a class="dropdown-item" th:href="@{/logout}">Đăng xuất</a></li>
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" th:href="@{/}">Trang chủ</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Lộ trình</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Bài viết</a>
+                        </li>
                     </ul>
-                </div>  
-            </div>
+                    <div class="d-flex mx-auto" role="search">
+                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-success" type="submit">Search</button>
+                    </div>
+                    <div sec:authorize="isAnonymous()" class="text-white d-flex">
+                        <a class="btn" type="button" th:href="@{/register}">Đăng ký</a>
+                        <a class="btn" type="button" th:href="@{/login}">Đăng nhập</a>
+                    </div>
+                    <div sec:authorize="isAuthenticated()" class="btn-group dropdown-center"
+                        style="margin-right: 100px;">
+                        <button type="button" class="btn btn-danger" data-bs-toggle="dropdown" aria-expanded="false"
+                            style="width: 40px; height: 40px; border-radius: 50%; display: flex; justify-content: center;">
+                            User
+                        </button>
+                        <ul class="dropdown-menu ">
+                            <li><a class="dropdown-item" href="#">Trang cá nhân</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-item" th:href="@{/enrollmented-course}">Khóa học của tôi</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-item" href="#">Cài đặt</a></li>
+                            <li><a class="dropdown-item" th:href="@{/logout}">Đăng xuất</a></li>
+                        </ul>
+                    </div>
+                </div>
         </nav>
     </header>
 
     <!-- Sidebar -->
     <sidebar id="sidebar">
     </sidebar>
-    
+
     <!-- Content -->
-    <div  class="container" style="margin-top: 100px; margin-bottom: 200px;">
+    <div class="container" style="margin-top: 100px; margin-bottom: 200px;">
         <div class="container">
             <form class="row" th:action="@{/detail-course}" method="post">
                 <div class="col-md-8">
@@ -70,14 +79,14 @@
                     <p th:text="${course.description}"></p>
                     <div>
                         <h5>Mục tiêu khóa học</h4>
-                        <div class="row my-3">
-                            <span class="col">Các kiến thức cơ bản, nền móng của ngành IT</span>
-                            <span class="col">Các mô hình, kiến trúc cơ bản khi triển khai ứng dụng</span>
-                        </div>
-                        <div class="row">
-                            <span class="col">Các khái niệm, thuật ngữ cốt lõi khi triển khai ứng dụng</span>
-                            <span class="col">Hiểu hơn về cách internet và máy vi tính hoạt động</span>
-                        </div>
+                            <div class="row my-3">
+                                <span class="col">Các kiến thức cơ bản, nền móng của ngành IT</span>
+                                <span class="col">Các mô hình, kiến trúc cơ bản khi triển khai ứng dụng</span>
+                            </div>
+                            <div class="row">
+                                <span class="col">Các khái niệm, thuật ngữ cốt lõi khi triển khai ứng dụng</span>
+                                <span class="col">Hiểu hơn về cách internet và máy vi tính hoạt động</span>
+                            </div>
                     </div>
                     <div>
                         <h5>Nội dung khóa học</h5>
@@ -97,17 +106,20 @@
                     <div class="row">
                         <img src="..." class="" alt="...">
                         <p th:text="${course.price} != 0 ? ${course.price}:'Miễn phí'"></p>
-                        <button th:if="${#authorization.expression('isAuthenticated()')}" type="button" class="btn btn-primary" style="width: auto;" data-bs-toggle="modal" data-bs-target="#exampleModal">Đăng ký khóa học</button>
-                        <a th:if="${#authorization.expression('isAnonymous()')}" 
-                            class="btn btn-primary" style="width: auto;"
-                            th:href="@{/login}">Đăng ký khóa học</a>
+                        <button th:if="${#authorization.expression('isAuthenticated()')}" type="button"
+                            class="btn btn-primary" style="width: auto;" data-bs-toggle="modal"
+                            data-bs-target="#exampleModal">Đăng ký khóa học</button>
+                        <a th:if="${#authorization.expression('isAnonymous()')}" class="btn btn-primary"
+                            style="width: auto;" th:href="@{/login}">Đăng ký khóa học</a>
                         <!-- Modal -->
-                        <div sec:authorize="isAuthenticated()" class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                        <div sec:authorize="isAuthenticated()" class="modal fade" id="exampleModal" tabindex="-1"
+                            aria-labelledby="exampleModalLabel" aria-hidden="true">
                             <div class="modal-dialog">
                                 <div class="modal-content">
                                     <div class="modal-header">
                                         <h1 class="modal-title fs-5" id="exampleModalLabel">Thông báo</h1>
-                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                            aria-label="Close"></button>
                                     </div>
                                     <div class="modal-body alert alert-success" role="alert">
                                         Bạn đã đăng ký khóa học thành công! Chúc bạn có những buổi học vui vẻ.
@@ -120,12 +132,14 @@
                         </div>
                         <p class="mt-3">Thời gian bắt đầu - Thời gian kết thúc</p>
                         <p><span>2024</span>> - <span>2025</span></p>
-                        <p>Đã có 
+                        <p>Đã có
                             <span th:text="${course.quantityStudent} + '/' + ${course.maxStudent}"></span>
-                        sinh viên đăng ký</p>
-                        <p>Còn trống 
-                            <span th:text="${course.maxStudent} - ${course.quantityStudent}"></span> 
-                        sinh viên</p>
+                            sinh viên đăng ký
+                        </p>
+                        <p>Còn trống
+                            <span th:text="${course.maxStudent} - ${course.quantityStudent}"></span>
+                            sinh viên
+                        </p>
                     </div>
                 </div>
             </form>
@@ -148,4 +162,5 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
