--- a/src/main/resources/templates/client/enrollmented_course.html
+++ b/src/main/resources/templates/client/enrollmented_course.html
@@ -1,84 +1,96 @@
 <!doctype html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
-          content="width=device-width, student-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+        content="width=device-width, student-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Trang chủ</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 
 </head>
+
 <body>
     <!-- Navbar -->
     <header id="header" class="mb-3">
         <nav class="navbar navbar-expand-lg bg-body-tertiary bg-primary fixed-top" data-bs-theme="dark">
             <div class="container-fluid">
                 <a class="navbar-brand" th:href="@{/}">Course</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" th:href="@{/}">Trang chủ</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Lộ trình</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Bài viết</a>
-                    </li>
-                </ul>
-                <div class="d-flex mx-auto" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
-                </div>
-                <div sec:authorize="isAnonymous()" class="text-white d-flex">
-                    <a class="btn" type="button" th:href="@{/register}">Đăng ký</a>
-                    <a class="btn" type="button" th:href="@{/login}">Đăng nhập</a>
-                </div>
-                <!-- Example single danger button -->
-                <div sec:authorize="isAuthenticated()" class="btn-group dropdown-center" style="margin-right: 100px;">
-                    <button type="button" class="btn btn-danger" data-bs-toggle="dropdown" aria-expanded="false" 
-                    style="width: 40px; height: 40px; border-radius: 50%; display: flex; justify-content: center;">
-                        User
-                    </button>
-                    <ul class="dropdown-menu ">
-                        <li><a class="dropdown-item" href="#">Trang cá nhân</a></li>
-                        <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" th:href="@{/enrollmented-course}">Khóa học của tôi</a></li>
-                        <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="#">Cài đặt</a></li>
-                        <li><a class="dropdown-item" th:href="@{/logout}">Đăng xuất</a></li>
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" th:href="@{/}">Trang chủ</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Lộ trình</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Bài viết</a>
+                        </li>
                     </ul>
+                    <div class="d-flex mx-auto" role="search">
+                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-success" type="submit">Search</button>
+                    </div>
+                    <div sec:authorize="isAnonymous()" class="text-white d-flex">
+                        <a class="btn" type="button" th:href="@{/register}">Đăng ký</a>
+                        <a class="btn" type="button" th:href="@{/login}">Đăng nhập</a>
+                    </div>
+                    <!-- Example single danger button -->
+                    <div sec:authorize="isAuthenticated()" class="btn-group dropdown-center"
+                        style="margin-right: 100px;">
+                        <button type="button" class="btn btn-danger" data-bs-toggle="dropdown" aria-expanded="false"
+                            style="width: 40px; height: 40px; border-radius: 50%; display: flex; justify-content: center;">
+                            User
+                        </button>
+                        <ul class="dropdown-menu ">
+                            <li><a class="dropdown-item" href="#">Trang cá nhân</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-item" th:href="@{/enrollmented-course}">Khóa học của tôi</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-item" href="#">Cài đặt</a></li>
+                            <li><a class="dropdown-item" th:href="@{/logout}">Đăng xuất</a></li>
+                        </ul>
+                    </div>
                 </div>
-            </div>
         </nav>
     </header>
 
     <!-- Sidebar -->
     <sidebar id="sidebar">
     </sidebar>
-    
+
     <!-- Content -->
     <div class="container" style="margin-top: 100px; ">
         <h3 class="mb-3">Khóa học của tôi</h1>
-        <div class="container" style="margin-bottom: 100px;">
-            <div class="row justify-content-between">
-                <div class="card mb-3" style="width: 18rem;" th:each="enrollment : ${enrollments}">
-                    <a href="" class="card-img-top" style="text-decoration: none;"><img src="..." class="" alt="..."></a>
-                    <div class="card-body">
-                        <a href="" style="text-decoration: none;" class="card-title"><h5 th:text="${enrollment.course.name}"></h5></a></br>
-                        <p class="card-text">Thời gian đăng ký</p>
+            <div class="container" style="margin-bottom: 100px;">
+                <div class="row justify-content-between">
+                    <div class="card mb-3" style="width: 18rem;" th:each="enrollment : ${enrollments}">
+                        <a href="" class="card-img-top" style="text-decoration: none;"><img src="..." class=""
+                                alt="..."></a>
+                        <div class="card-body">
+                            <a href="" style="text-decoration: none;" class="card-title">
+                                <h5 th:text="${enrollment.course.name}"></h5>
+                            </a></br>
+                            <p class="card-text">Thời gian đăng ký</p>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
     </div>
 
     <!-- Footer -->
-    <footer class="py-4 bg-dark mt-auto">
+    <footer class="py-4 bg-dark mt-auto fixed-bottom">
         <div class="container-fluid px-4">
             <div class="d-flex align-items-center justify-content-between small">
                 <div class="text-white">Copyright &copy; Thái Nguyễn Quang</div>
@@ -93,4 +105,5 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
